# CrystalEngine

./: CMakeLists.txt
Resources/Shaders/: default.frag  default.vs
src/: Crystal.cpp  Crystal.h  main.cpp
src/Accelerator/: Accelerator.cpp  Accelerator.h  Brute.cpp  Brute.h  KDTree.cpp  KDTree.h
src/Accelerator/PhotonMapping/: PMKDTree.cpp  PMKDTree.h
src/Core/: Camera.cpp  Camera.h  GeometryObject.cpp  GeometryObject.h  HitRecord.cpp  HitRecord.h  Object.h  Raytracer.cpp  Raytracer.h  Scene.cpp  Scene.h  SurfaceInteraction.cpp  SurfaceInteraction.h
src/Graphics/: FrameBuffer.cpp  FrameBuffer.h  ScreenRenderer.cpp  ScreenRenderer.h
src/Graphics/Shaders/: ShaderManager.cpp
src/Integrator/: EnvironmentIntegrator.cpp  EnvironmentIntegrator.h  Integrator.h  PRTIntegrator.cpp  PRTIntegrator.h  PathTracingIntegrator.cpp  PathTracingIntegrator.h  PhotonMPIntegrator.cpp  PhotonMPIntegrator.h  SamplerIntegrator.cpp  SamplerIntegrator.h  WhittedIntegrator.cpp  WhittedIntegrator.h
src/Lights/: AreaLight.cpp  AreaLight.h  Light.h  PointLight.cpp  PointLight.h  SphereLight.cpp  SphereLight.h
src/Materials/: Brick.cpp  Brick.h  Cook_Torrance.cpp  Cook_Torrance.h  Default.cpp  Default.h  Glass.cpp  Glass.h  Lighted.cpp  Lighted.h  Material.h  Metal.cpp  Metal.h  Phong.cpp  Phong.h  Phong_Blinn.cpp  Phong_Blinn.h  Strauss.cpp  Strauss.h
src/PRTEvaluator/: PRTEval.h  SHEval.cpp  SHEval.h
src/Primitives/: Cylinder.cpp  Cylinder.h  Object.h  Primitives.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h  TriangleMesh.cpp  TriangleMesh.h
src/Reflection/: BSDF.cpp  BSDF.h  Lambertian.cpp  Lambertian.h  PhongReflection.cpp  PhongReflection.h  SpecularReflection.cpp  SpecularReflection.h  SpecularTransmission.cpp  SpecularTransmission.h  Transmission.cpp  Transmission.h
src/Sampler/: DefaultSampler.h  Sampler.h
src/Shapes/: Cylinder.cpp  Cylinder.h  Primitives.h  Shape.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h  TriangleMesh.cpp  TriangleMesh.h
src/Textures/: CubemapTexture.cpp  CubemapTexture.h  ImageTexture.cpp  ImageTexture.h  Texture.h
src/ToneMapping/: ReinhardMapper.cpp  ReinhardMapper.h  ToneMapper.h  WardMapper.cpp  WardMapper.h
src/Utils/: BoundingBox.cpp  BoundingBox.h  Math.h  ObjLoader.cpp  ObjLoader.h  Random.cpp  Random.h  Ray.h
tmp/: Cook_Torrance.cpp  Cook_Torrance.h  Lighted.cpp  Lighted.h  Phong_Blinn.cpp  Phong_Blinn.h  Strauss.cpp  Strauss.h
